docs/4.x/codecommit_repository.md
---
permalink: /codecommit_repository/
---

# codecommit_repository

`codecommit_repository` represents the `aws_codecommit_repository` Terraform resource.



This package contains functions and utilities for setting up the resource using Jsonnet code.


## Index

* [`fn new()`](#fn-new)
* [`fn newAttrs()`](#fn-newattrs)
* [`fn withDefaultBranch()`](#fn-withdefaultbranch)
* [`fn withDescription()`](#fn-withdescription)
* [`fn withRepositoryName()`](#fn-withrepositoryname)
* [`fn withTags()`](#fn-withtags)
* [`fn withTagsAll()`](#fn-withtagsall)

## Fields

### fn new

```ts
new()
```


`aws.codecommit_repository.new` injects a new `aws_codecommit_repository` Terraform `resource`
block into the root module document.

Additionally, this inserts a private function into the `_ref` attribute that generates references to attributes of the
resource. For example, if you added a new instance to the root using:

    # arguments omitted for brevity
    aws.codecommit_repository.new('some_id')

You can get the reference to the `id` field of the created `aws.codecommit_repository` using the reference:

    $._ref.aws_codecommit_repository.some_id.get('id')

This is the same as directly entering `"${ aws_codecommit_repository.some_id.id }"` as the value.

NOTE: if you are chaining multiple resources together in a merge operation, you may not be able to use `super`, `self`,
or `$` to refer to the root object. Instead, make an explicit outer object using `local`.

**Args**:
  - `resourceLabel` (`string`): The name label of the block.
  - `default_branch` (`string`):  When `null`, the `default_branch` field will be omitted from the resulting object.
  - `description` (`string`):  When `null`, the `description` field will be omitted from the resulting object.
  - `repository_name` (`string`): 
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.

**Returns**:
- A mixin object that injects the new resource into the root Terraform configuration.


### fn newAttrs

```ts
newAttrs()
```


`aws.codecommit_repository.newAttrs` constructs a new object with attributes and blocks configured for the `codecommit_repository`
Terraform resource.

Unlike [aws.codecommit_repository.new](#fn-codecommitrepositorynew), this function will not inject the `resource`
block into the root Terraform document. Instead, this must be passed in as the `attrs` argument for the
[tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) function to build a complete block.

This is most useful when you need to preprocess the attributes with functions, conditional, or looping logic prior to
injecting into a complete block.

**Args**:
  - `default_branch` (`string`):  When `null`, the `default_branch` field will be omitted from the resulting object.
  - `description` (`string`):  When `null`, the `description` field will be omitted from the resulting object.
  - `repository_name` (`string`): 
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.

**Returns**:
  - An attribute object that can be used with [tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) to construct a new `codecommit_repository` resource into the root Terraform configuration.


### fn withDefaultBranch

```ts
withDefaultBranch()
```

`aws.codecommit_repository.withDefaultBranch` constructs a mixin object that can be merged into the `codecommit_repository`
Terraform resource block to set or update the default_branch field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `default_branch` field.


### fn withDescription

```ts
withDescription()
```

`aws.codecommit_repository.withDescription` constructs a mixin object that can be merged into the `codecommit_repository`
Terraform resource block to set or update the description field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `description` field.


### fn withRepositoryName

```ts
withRepositoryName()
```

`aws.codecommit_repository.withRepositoryName` constructs a mixin object that can be merged into the `codecommit_repository`
Terraform resource block to set or update the repository_name field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `repository_name` field.


### fn withTags

```ts
withTags()
```

`aws.codecommit_repository.withTags` constructs a mixin object that can be merged into the `codecommit_repository`
Terraform resource block to set or update the tags field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags` field.


### fn withTagsAll

```ts
withTagsAll()
```

`aws.codecommit_repository.withTagsAll` constructs a mixin object that can be merged into the `codecommit_repository`
Terraform resource block to set or update the tags_all field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags_all` field.
